[tool.poetry]
name = "repl-nix-sslexplorer"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_sslexplorer"}]

[tool.poetry.dependencies]
python = "^3.10"
garbledave-package = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
